--- a/frontend/src/app/components/create-story/create-story.component.html
+++ b/frontend/src/app/components/create-story/create-story.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="div-scenario" *ngFor="let item of scenarios">
         <div class="div-info" *ngIf="item.tipo_scenario !== 'FINALE'">
-            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo.length > 25 ? (item.testo | slice:0:25) + '...' : item.testo  }}</span></label></div>
             <p></p>
             <div id="div-text"><label><span class="span-header">Tipologia risposta</span><br><span class="span-text">{{ item.tipo_risposta }}</span></label></div>
             <p></p>
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="div-info" *ngIf="item.tipo_scenario === 'FINALE'">
-            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo.length > 25 ? (item.testo | slice:0:25) + '...' : item.testo }}</span></label></div>
             <p></p>
             <div id="div-text"><label><span class="span-header">Tipologia scenario</span><br><span class="span-text">{{ item.tipo_scenario }}</span></label></div>
             <p></p>
@@ -41,7 +41,7 @@
     </div>
     <div class="div-scenario" *ngFor="let item of scenarios">
         <div class="div-info" *ngIf="item.tipo_scenario !== 'FINALE'">
-            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo.length > 25 ? (item.testo | slice:0:25) + '...' : item.testo }}</span></label></div>
             <p></p>
             <div id="div-text"><label><span class="span-header">Tipologia risposta</span><br><span class="span-text">{{ item.tipo_risposta }}</span></label></div>
             <p></p>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="div-info" *ngIf="item.tipo_scenario === 'FINALE'">
-            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo.length > 25 ? (item.testo | slice:0:25) + '...' : item.testo }}</span></label></div>
             <p></p>
             <div id="div-text"><label><span class="span-header">Tipologia scenario</span><br><span class="span-text">{{ item.tipo_scenario }}</span></label></div>
             <p></p>
