--- a/frontend/src/app/components/single-choice/single-choice.component.html
+++ b/frontend/src/app/components/single-choice/single-choice.component.html
@@ -2,26 +2,35 @@
 <p id="title">Il tuo <span>indovinello</span></p>
 <div class="container" *ngIf="singleChoice && !isInTextEditMode">
     <div class="div-single-choice">
-        <div class="div-inline" >
+        <div class="div-inline">
             <div id="div-info">
-                <label><span id="span-header">Testo</span><br><span class="span-text">{{ singleChoice.testo
-                        }}</span></label><br>
+                <label><span id="span-header">Testo</span><br>
+                    <span class="span-text">
+                        {{ singleChoice.testo.length > 25 ? (singleChoice.testo | slice:0:25) + '...' :
+                        singleChoice.testo }}
+                    </span></label><br>
+
             </div>
             <p></p>
             <div id="div-info">
                 <label><span id="span-header">Risposta Indovinello</span><br><span class="span-text">{{
+                        singleChoice.risposta.length > 25 ? (singleChoice.risposta | slice:0:25) + '...' :
                         singleChoice.risposta }}</span></label><br>
             </div>
         </div>
         <div class="div-inline">
             <div id="div-info">
                 <label *ngIf="textCorrectAnswer"><span id="span-header">Testo destinazione corretta</span><br><span
-                        class="span-text">{{ textCorrectAnswer }}</span></label><br>
+                        class="span-text">{{ textCorrectAnswer.length > 25 ? (textCorrectAnswer | slice:0:25) + '...' :
+                        textCorrectAnswer }}
+                    </span></label><br>
             </div>
             <p></p>
             <div id="div-info">
                 <label *ngIf="textWrongAnswer"><span id="span-header">Testo destinazione errato</span><br><span
-                        class="span-text">{{ textWrongAnswer }}</span></label><br>
+                        class="span-text">{{ textWrongAnswer.length > 25 ? (textWrongAnswer | slice:0:25) + '...' :
+                        textWrongAnswer }}
+                    </span></label><br>
             </div>
         </div>
         <div><button (click)="removeSingleChoice(singleChoice.id)">Rimuovi</button></div>
@@ -32,24 +41,28 @@
     <div class="div-single-choice">
         <div class="div-inline">
             <div id="div-info">
-                <label><span id="span-header">Testo</span><br><span class="span-text">{{ singleChoice.testo
-                        }}</span></label><br>
+                <label><span id="span-header">Testo</span><br><span class="span-text"> {{ singleChoice.testo.length > 25
+                        ? (singleChoice.testo | slice:0:25) + '...' :
+                        singleChoice.testo }}</span></label><br>
             </div>
             <p></p>
             <div id="div-info">
                 <label><span id="span-header">Risposta Indovinello</span><br><span class="span-text">{{
+                        singleChoice.risposta.length > 25 ? (singleChoice.risposta | slice:0:25) + '...' :
                         singleChoice.risposta }}</span></label><br>
             </div>
         </div>
         <div class="div-inline">
             <div id="div-info">
                 <label><span id="span-header">Testo destinazione corretta</span><br><span class="span-text">{{
-                        textCorrectAnswer }}</span></label><br>
+                        textCorrectAnswer.length > 25 ? (textCorrectAnswer | slice:0:25) + '...' : textCorrectAnswer
+                        }}</span></label><br>
             </div>
             <p></p>
             <div id="div-info">
                 <label><span id="span-header">Testo destinazione errato</span><br><span class="span-text">{{
-                        textWrongAnswer }}</span></label><br>
+                        textWrongAnswer.length > 25 ? (textWrongAnswer | slice:0:25) + '...' : textWrongAnswer
+                        }}</span></label><br>
             </div>
         </div>
         <div><button (click)="editSingleChoicheText(singleChoice)">Modifica</button></div>
