--- a/frontend/src/app/components/play-page/play-page.component.css
+++ b/frontend/src/app/components/play-page/play-page.component.css
@@ -74,7 +74,6 @@ a:hover {
     width: 85%;
     border-top: 2px solid rgb(204, 204, 204, 0.7);
 }
-::-webkit-inner-spin-button
 
 .div-text-single {
     margin-bottom: 2rem;
@@ -103,6 +102,7 @@ textarea {
     margin-top: 2.5rem;
     background-color: rgb(244, 244, 244);
     border: none;
+    border-radius: 5px;
     box-shadow: 5px 5px 5px #aaaa;
     transition: 0.5s;
 }
