--- a/frontend/src/app/components/form-story-object/form-story-object.component.html
+++ b/frontend/src/app/components/form-story-object/form-story-object.component.html
@@ -7,7 +7,7 @@
                 <label for="nome">Nome<span>*</span></label>
                 <input type="text" id="nome" name="nome" required [(ngModel)]="nome" maxlength="40">
                 <label for="descrizione">Descrizione<span>*</span></label>
-                <textarea id="descrizione" name="descrizione" required [(ngModel)]="descrizione" maxlength="50"></textarea>
+                <textarea id="descrizione" name="descrizione" required [(ngModel)]="descrizione" maxlength="100"></textarea>
                 <button type="submit">Crea</button>
             </div>
         </form>
@@ -22,7 +22,7 @@
                 <label for="nome">Nome</label>
                 <input *ngIf="currentStoryObject" type="text" id="nome" name="nome" required [ngModel]="currentStoryObject.nome" (ngModelChange)="onNameChange($event)"> 
                 <label for="descrizione">Descrizione</label>
-                <textarea *ngIf="currentStoryObject" id="descrizione" name="descrizione" required [ngModel]="currentStoryObject.descrizione" (ngModelChange)="onDescriptionChange($event)"></textarea>
+                <textarea *ngIf="currentStoryObject" id="descrizione" name="descrizione" required [ngModel]="currentStoryObject.descrizione" (ngModelChange)="onDescriptionChange($event)" maxlength="100"></textarea>
                 <button type="submit" class="btn-creazione" [disabled]="isUpdated()">Aggiorna Oggetto Storia</button>
             </div>
         </form>
