--- a/frontend/src/app/components/form-story-object/form-story-object.component.html
+++ b/frontend/src/app/components/form-story-object/form-story-object.component.html
@@ -5,9 +5,9 @@
         <form (ngSubmit)="onSubmit()">
             <div class="div-form">
                 <label for="nome">Nome<span>*</span></label>
-                <input type="text" id="nome" name="nome" required [(ngModel)]="nome" maxlength="40">
+                <input type="text" id="nome" name="nome" required [(ngModel)]="nome" maxlength="50">
                 <label for="descrizione">Descrizione<span>*</span></label>
-                <textarea id="descrizione" name="descrizione" required [(ngModel)]="descrizione" maxlength="100"></textarea>
+                <textarea id="descrizione" name="descrizione" required [(ngModel)]="descrizione" maxlength="255"></textarea>
                 <button type="submit">Crea</button>
             </div>
         </form>
@@ -20,9 +20,9 @@
         <form (ngSubmit)="updateStoryObjectText()">
             <div class="div-form">
                 <label for="nome">Nome</label>
-                <input *ngIf="currentStoryObject" type="text" id="nome" name="nome" required [ngModel]="currentStoryObject.nome" (ngModelChange)="onNameChange($event)"> 
+                <input *ngIf="currentStoryObject" type="text" id="nome" name="nome"  maxlength="50"  required [ngModel]="currentStoryObject.nome"  (ngModelChange)="onNameChange($event)"> 
                 <label for="descrizione">Descrizione</label>
-                <textarea *ngIf="currentStoryObject" id="descrizione" name="descrizione" required [ngModel]="currentStoryObject.descrizione" (ngModelChange)="onDescriptionChange($event)" maxlength="100"></textarea>
+                <textarea *ngIf="currentStoryObject" id="descrizione" name="descrizione" required [ngModel]="currentStoryObject.descrizione" (ngModelChange)="onDescriptionChange($event)" maxlength="255"></textarea>
                 <button type="submit" class="btn-creazione" [disabled]="isUpdated()">Aggiorna Oggetto Storia</button>
             </div>
         </form>
